--- a/about/about.html
+++ b/about/about.html
@@ -42,8 +42,8 @@
               User
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownUser1">
-              <li><a class="dropdown-item" href="login-register/login.html">Login</a></li>
-              <li><a class="dropdown-item" href="login-register/register.html">Register</a></li>
+              <li><a class="dropdown-item" href="../login-register/register.html">Login</a></li>
+              <li><a class="dropdown-item" href="../login-register/register.html">Register</a></li>
               <li><a class="dropdown-item" href="#">Settings</a></li>
             </ul>
           </div>
