--- a/dealership/dealership.html
+++ b/dealership/dealership.html
@@ -7,9 +7,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-    <script src="jquery-3.7.1.min.js"></script>
     <link rel="icon" href="../img/arknigh.png">
     <title>yum yummeres</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script>
+    $(document).ready(function(){
+      // Change event for checkboxes
+      $("input[type='checkbox']").change(function(){
+        var checkedValues = [];
+        $("input[type='checkbox']:checked").each(function(){
+          checkedValues.push($(this).val());
+        });
+
+        // Display selected checkbox values
+        $("#selectedValues").text("Selected Values: " + checkedValues.join(', '));
+      });
+
+      // Change event for select dropdown
+      $("#mySelect").change(function(){
+        var selectedOption = $(this).val();
+        $("#selectedOption").text("Selected Option: " + selectedOption);
+        // Perform actions based on the selected option
+      });
+    });
+  </script>
 </head>
 <body>
    <!-- Navbar -->
@@ -40,8 +61,8 @@
           User
         </a>
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownUser1">
-          <li><a class="dropdown-item" href="login-register/login.html">Login</a></li>
-          <li><a class="dropdown-item" href="login-register/register.html">Register</a></li>
+          <li><a class="dropdown-item" href="../login-register/login.html">Login</a></li>
+          <li><a class="dropdown-item" href="../login-register/register.html">Register</a></li>
           <li><a class="dropdown-item" href="#">Settings</a></li>
         </ul>
       </div>
@@ -107,44 +128,31 @@
         <div class="dalem-form">
             <h1>Please Fill Our form</h1>
             <form>
-                <div class="form-row">
-                    <div class="col-md-4 mb-3">
-                        <label for="validationDefault01">First name</label>
-                        <input type="text" class="form-control" id="validationDefault01" placeholder="First name"
-                            value="Mark" required>
-                    </div>
-                    <div class="col-md-4 mb-3">
-                        <label for="validationDefault02">Last name</label>
-                        <input type="text" class="form-control" id="validationDefault02" placeholder="Last name"
-                            value="Otto" required>
-                    </div>
-                    <div class="col-md-4 mb-3">
-                        <label for="validationDefaultUsername">Username</label>
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text" id="inputGroupPrepend2">@</span>
-                            </div>
-                            <input type="text" class="form-control" id="validationDefaultUsername"
-                                placeholder="Username" aria-describedby="inputGroupPrepend2" required>
-                        </div>
-                    </div>
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label">Email address</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                 </div>
-                <div class="form-row">
-                    <div class="col-md-6 mb-3">
-                        <label for="validationDefault03">City</label>
-                        <input type="text" class="form-control" id="validationDefault03" placeholder="City" required>
-                    </div>
-                    <div class="col-md-3 mb-3">
-                        <label for="validationDefault04">State</label>
-                        <input type="text" class="form-control" id="validationDefault04" placeholder="State" required>
-                    </div>
-                    <div class="col-md-3 mb-3">
-                        <label for="validationDefault05">Zip</label>
-                        <input type="text" class="form-control" id="validationDefault05" placeholder="Zip" required>
-                    </div>
+                <div class="mb-3">
+                  <label for="exampleInputPassword1" class="form-label">Password</label>
+                  <input type="password" class="form-control" id="exampleInputPassword1">
                 </div>
-                <button class="btn btn-primary" type="submit">Submit form</button>
-            </form>
+                <div class="mb-3">
+                    <label class="form-label">Select Your Car</label>
+                    <select class="form-select" id="mySelect">
+                      <option>Car 1</option>
+                      <option>Car 2</option>
+                      <option>Car 3</option>
+                    </select>
+                  </div>
+                <div class="mb-3 form-check">
+                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                  <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                </div>
+                <p id="selectedValues">Selected Values: </p>
+                <p id="selectedOption">Selected Option: </p>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
         </div>
     </div>
 <footer>
