--- a/index.html
+++ b/index.html
@@ -15,6 +15,67 @@
     <title>yum yummeres</title>
     <link rel="icon" href="/img/arknigh.png">
     <script src="jquery-3.7.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <style>
+        #container {
+            width: 1200px;
+            height: 400px;
+            border: 1px solid #d7d6d6;
+            border-radius: 20px;
+            margin: auto;
+            padding: 20px;
+        }
+
+        #coordinates {
+            margin-top: 10px;
+        }
+    </style>
+    <script>
+        $(document).ready(function () {
+            $("#container").mousemove(function (event) {
+                var x = event.pageX - $(this).offset().left;
+                var y = event.pageY - $(this).offset().top;
+                $("#coordinates").text("Mouse coordinates: (" + x + ", " + y + ")");
+            });
+
+            $("#myInput").focus(function(){
+                $("#focusStatus").text("Input field focused");
+                // Perform actions when the input field gains focus
+            });
+
+            $("#myInput").blur(function(){
+                $("#focusStatus").text("Input field blurred");
+                // Perform actions when the input field loses focus
+            });
+
+            $("input[type='checkbox']").change(function(){
+                var checkedValues = [];
+                $("input[type='checkbox']:checked").each(function(){
+                    checkedValues.push($(this).val());
+                });
+
+                // Display selected checkbox values
+                $("#selectedValues").text("Selected Values: " + checkedValues.join(', '));
+            });
+
+            $("#mySelect").change(function(){
+                var selectedOption = $(this).val();
+                $("#selectedOption").text("Selected Option: " + selectedOption);
+                // Perform actions based on the selected option
+            });
+
+            $("#myInput").keypress(function(event){
+                var keyPressed = event.key;
+                $("#keyInfo").text("Key Pressed: " + keyPressed);
+
+                // Check if 'Enter' key is pressed (key code 13)
+                if (event.which === 13 || event.keyCode === 13) {
+                    $("#keyInfo").append("<br>Enter key pressed!");
+                    // Perform specific action for Enter key press
+                }
+            });
+        });
+    </script>
 </head>
 
 <body>
@@ -67,11 +128,11 @@
         </div>
     </div>
     <!-- end Container -->
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" >
-        <path fill="#0099ff"  fill-opacity="2" d="M0,224L0,64L1440,64L1440,320L0,320L0,320Z"></path>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#0099ff" fill-opacity="2" d="M0,224L0,64L1440,64L1440,320L0,320L0,320Z"></path>
     </svg>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#0099ff"  fill-opacity="1"
+        <path fill="#0099ff" fill-opacity="1"
             d="M0,192L30,165.3C60,139,120,85,180,85.3C240,85,300,139,360,181.3C420,224,480,256,540,250.7C600,245,660,203,720,186.7C780,171,840,181,900,186.7C960,192,1020,192,1080,186.7C1140,181,1200,171,1260,181.3C1320,192,1380,224,1410,240L1440,256L1440,0L1410,0C1380,0,1320,0,1260,0C1200,0,1140,0,1080,0C1020,0,960,0,900,0C840,0,780,0,720,0C660,0,600,0,540,0C480,0,420,0,360,0C300,0,240,0,180,0C120,0,60,0,30,0L0,0Z">
         </path>
     </svg>
@@ -108,8 +169,7 @@
                     Mercedes-benz SL 65 AMG
                 </h4>
                 <img class="img"
-                    src="https://static.wikia.nocookie.net/forzamotorsport/images/2/28/HOR_XB1_M-B_SL_65.png"
-                    alt="">
+                    src="https://static.wikia.nocookie.net/forzamotorsport/images/2/28/HOR_XB1_M-B_SL_65.png" alt="">
                 <div class="card-container">
                     <button>view</button>
                 </div>
@@ -118,8 +178,7 @@
                 <h4>
                     BMW i8
                 </h4>
-                <img class="img"
-                    src=" https://static.wikia.nocookie.net/forzamotorsport/images/7/7e/HOR_XB1_BMW_i8.png"
+                <img class="img" src=" https://static.wikia.nocookie.net/forzamotorsport/images/7/7e/HOR_XB1_BMW_i8.png"
                     alt="">
                 <div class="card-container">
                     <button>view</button>
@@ -141,8 +200,7 @@
                     BMW M3'08
                 </h4>
                 <img class="img"
-                    src="https://static.wikia.nocookie.net/forzamotorsport/images/0/0a/HOR_XB1_BMW_M3_08.png/"
-                    alt="">
+                    src="https://static.wikia.nocookie.net/forzamotorsport/images/0/0a/HOR_XB1_BMW_M3_08.png/" alt="">
                 <div class="card-container">
                     <button>view</button>
                 </div>
@@ -152,8 +210,7 @@
                     Audi R8
                 </h4>
                 <img class="img"
-                    src="https://static.wikia.nocookie.net/forzamotorsport/images/f/f2/HOR_XB1_Audi_R8_13.png"
-                    alt="">
+                    src="https://static.wikia.nocookie.net/forzamotorsport/images/f/f2/HOR_XB1_Audi_R8_13.png" alt="">
                 <div class="card-container">
                     <button>view</button>
                 </div>
@@ -186,49 +243,57 @@
         <marquee scrollamount="20">get your free cars today</marquee>
     </h1>
     <!-- end container 3 -->
+    <!-- Container Free -->
+    <div class="container-free">
+        <center>
+            <h1>Mouse Event!</h1>
+            <h1>Its a cool feature</h1>
+        
+        <div id="container">
+            <p>Move your mouse over this area:</p>
+            <p id="coordinates"></p>
+        </div>
+        <br>
+        <h4>Focus Event & KeyPress Event!</h4>
+        <input type="text" id="myInput" placeholder="Click here" style="width: 1200px;">
+    <p id="focusStatus"></p>
+<p id="keyInfo"></p>
+    </div>
+    </center>
+
+    <!-- Container Free -->
     <!-- Container 4-->
     <div class="form4">
         <div class="dalem-form">
+            <h1 style="text-align: center;">contact form</h1>
             <h1>Please Fill Our form</h1>
-            <form>
-                <div class="form-row">
-                    <div class="col-md-4 mb-3">
-                        <label for="validationDefault01">First name</label>
-                        <input type="text" class="form-control" id="validationDefault01" placeholder="First name"
-                            value="Mark" required>
-                    </div>
-                    <div class="col-md-4 mb-3">
-                        <label for="validationDefault02">Last name</label>
-                        <input type="text" class="form-control" id="validationDefault02" placeholder="Last name"
-                            value="Otto" required>
-                    </div>
-                    <div class="col-md-4 mb-3">
-                        <label for="validationDefaultUsername">Username</label>
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text" id="inputGroupPrepend2">@</span>
-                            </div>
-                            <input type="text" class="form-control" id="validationDefaultUsername"
-                                placeholder="Username" aria-describedby="inputGroupPrepend2" required>
-                        </div>
-                    </div>
+            <h4>Change Event!</h4>
+             <form>
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label">Email address</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                 </div>
-                <div class="form-row">
-                    <div class="col-md-6 mb-3">
-                        <label for="validationDefault03">City</label>
-                        <input type="text" class="form-control" id="validationDefault03" placeholder="City" required>
-                    </div>
-                    <div class="col-md-3 mb-3">
-                        <label for="validationDefault04">State</label>
-                        <input type="text" class="form-control" id="validationDefault04" placeholder="State" required>
-                    </div>
-                    <div class="col-md-3 mb-3">
-                        <label for="validationDefault05">Zip</label>
-                        <input type="text" class="form-control" id="validationDefault05" placeholder="Zip" required>
-                    </div>
+                <div class="mb-3">
+                  <label for="exampleInputPassword1" class="form-label">Password</label>
+                  <input type="password" class="form-control" id="exampleInputPassword1">
                 </div>
-                <button class="btn btn-primary" type="submit">Submit form</button>
-            </form>
+                <div class="mb-3">
+                    <label class="form-label">Select Your Car</label>
+                    <select class="form-select" id="mySelect">
+                      <option>Car 1</option>
+                      <option>Car 2</option>
+                      <option>Car 3</option>
+                    </select>
+                  </div>
+                <div class="mb-3 form-check">
+                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                  <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                </div>
+                <p id="selectedValues">Selected Values: </p>
+                <p id="selectedOption">Selected Option: </p>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
         </div>
     </div>
 
