--- a/login-register/login.html
+++ b/login-register/login.html
@@ -14,7 +14,30 @@
 	<link rel="stylesheet" type="text/css" href="util.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<script src="jquery-3.7.1.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<link rel="icon" href="../img/arknigh.png">
+	<script>
+		$(document).ready(function(){
+		  $("#loginButton").click(function(){
+			var username = $("#username").val();
+			var password = $("#password").val();
+			
+			// Perform basic client-side validation
+			if(username === '' || password === '') {
+			  alert("Please enter both username and password");
+			  return;
+			}
+	
+			// Simulated login process (replace this with your actual login logic)
+			if(username === 'anggara' && password === '123') {
+			  // Redirect to the index/main page upon successful login
+			  window.location.href = "../index.html"; // Redirect to the index/main page
+			} else {
+			  alert("Invalid username or password. Please try again.");
+			}
+		  });
+		});
+	  </script>
 </head>
 <body>
 	
@@ -31,7 +54,7 @@
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-						<input class="input100" type="text" name="email" placeholder="Email">
+						<input class="input100" type="text" name="email" placeholder="Email" id="username">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
@@ -39,7 +62,7 @@
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate = "Password is required">
-						<input class="input100" type="password" name="pass" placeholder="Password">
+						<input class="input100" type="password" name="pass" placeholder="Password" id="password">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
@@ -47,7 +70,7 @@
 					</div>
 					
 					<div class="container-login100-form-btn">
-						<a class="login100-form-btn"  href="../index.html">
+						<a class="login100-form-btn" id="loginButton">
 							Login
 						</a>
 					</div>
