--- a/login-register/forgot.html
+++ b/login-register/forgot.html
@@ -15,6 +15,9 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
     <script src="jquery.js"></script>
 	<link rel="icon" href="../img/arknigh.png">
+	<script>
+		
+	</script>
 </head>
 <body>
 	
